--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <base href="/demo/" />
+    <!--<base href="/demo/" />-->
     <title>Mobile Angular UI Examples</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
     <link rel="stylesheet" href="demo.css" />
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-touch.min.js"></script>
+    <script src="/dist/js/angular.min.js"></script>
+    <script src="/dist/js/angular-route.min.js"></script>
+    <script src="/dist/js/angular-touch.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
     <script src="demo.js"></script>
   </head>
