--- a/demo/sidebar.html
+++ b/demo/sidebar.html
@@ -1,17 +1,12 @@
-<h1 class="app-name">Mobile Angular UI</h1>
+<h1 class="app-name">目录</h1>
 
 <div class="scrollable sidebar-scrollable">
   <div class="scrollable-content">
     <div class="list-group" toggle="off" bubble target="mainSidebar">
-      <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/scroll">Scroll <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/toggle">Toggle <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/tabs">Tabs <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/accordion">Accordion <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/overlay">Overlay <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/forms">Forms <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/carousel">Carousel <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/">首页 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/list">朋友列表 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/create">新建朋友 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/set">设置 <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
-
   </div>
 </div>
