split express into layers

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   ** NOTE **
 
   Run `grunt connect` then
-  navigate to http://localhost:3000/demo
+  navigate to http://localhost:3000/public
   to see this page in browser
 
   -->
 <html>
   <head>
     <meta charset="utf-8" />
-    <!--<base href="/demo/" />-->
+    <!--<base href="/public/" />-->
     <title>我的朋友</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
